--- a/ex4.html
+++ b/ex4.html
@@ -56,10 +56,9 @@
             var li = document.createElement("li")
             var textnode = document.createTextNode(input.value);
             li.appendChild(textnode);
-
             var deleteButton = document.createElement("button");
             deleteButton.textContent = "delete";
-            deleteButton.onclick = remove(this.parentNode);
+            deleteButton.onclick = function(){remove(this.parentNode)};
             li.appendChild(deleteButton);
             ul.appendChild(li);
          }
